# asiowebserver

devices/volunteer1/: CMakeLists.txt  main.cpp
devices/volunteer1/volunteer1exec/: CMakeCache.txt  Makefile  cmake_install.cmake
doc_root/: asset-manifest.json  index.html
doc_root/static/js/: 453.9524fcad.chunk.js  main.9d9764a8.js
include/async_mqtt5/impl/: connect_op.hpp
include/include/: H5pubconf.h  gmp.h
include/include/libxslt/: xsltconfig.h
include/include/qt/QtQml/5.15.2/QtQml/private/: qqmljsparser_p.h
include/include/server/: pg_config.h
include/include/unixODBC/: config.h  unixodbc_conf.h
include/src/str/: str.hpp
server-1/: CMakeLists.txt  globals.hpp  main.cpp  request_handler.cpp
server-1/server1exec/: CMakeCache.txt  Makefile  cmake_install.cmake
server-1/server1exec/static/js/: main.9d9764a8.js.map
server2/: CMakeLists.txt  main.cpp  request_handler.cpp
server2/server2exec/: CMakeCache.txt  Makefile  cmake_install.cmake
server2/server2exec/doc_root_/static/js/: 453.9524fcad.chunk.js.map
server3/: CMakeLists.txt  main.cpp  request_handler.cpp
server3/server3exec/: CMakeCache.txt  Makefile  cmake_install.cmake
test/: CMakeLists.txt  main.cpp
test/testexec/: CMakeCache.txt  Makefile  cmake_install.cmake
